--- a/HostWin32Test/Views/MainView.xaml
+++ b/HostWin32Test/Views/MainView.xaml
@@ -17,9 +17,18 @@
       <RowDefinition Height="Auto" />
     </Grid.RowDefinitions>
 
-    <Button Content="Dummy" />
+    <StackPanel>
+      <Button Content="Add" Command="{Binding AddCommand, Mode=OneTime}" />
+      <Button Content="Remove" Command="{Binding RemoveCommand, Mode=OneTime}" />
+    </StackPanel>
 
-    <vw:Win32Host Grid.Row="1" />
+    <ItemsControl Grid.Row="1" ItemsSource="{Binding Values}">
+      <ItemsControl.ItemTemplate>
+        <DataTemplate>
+          <vw:Win32Host />
+        </DataTemplate>
+      </ItemsControl.ItemTemplate>
+    </ItemsControl>
 
     <Button Grid.Row="2" Content="Dummy" />
   </Grid>
