--- a/HostWin32Test/Views/MainView.xaml
+++ b/HostWin32Test/Views/MainView.xaml
@@ -22,13 +22,15 @@
       <Button Content="Remove" Command="{Binding RemoveCommand, Mode=OneTime}" />
     </StackPanel>
 
-    <ItemsControl Grid.Row="1" ItemsSource="{Binding Values}">
-      <ItemsControl.ItemTemplate>
-        <DataTemplate>
-          <vw:Win32Host />
-        </DataTemplate>
-      </ItemsControl.ItemTemplate>
-    </ItemsControl>
+    <ScrollViewer Grid.Row="1">
+      <ItemsControl ItemsSource="{Binding Values}">
+        <ItemsControl.ItemTemplate>
+          <DataTemplate>
+            <vw:Win32Host Value="{Binding .}" />
+          </DataTemplate>
+        </ItemsControl.ItemTemplate>
+      </ItemsControl>
+    </ScrollViewer>
 
     <Button Grid.Row="2" Content="Dummy" />
   </Grid>
